--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -796,3 +796,25 @@ margin-top: 40px;
   font-size: 30px;
   color: #163369;
 }
+.clasicosss{
+  margin-bottom: 100px;
+}
+.gallery {
+  margin-top: -450px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(2, 30rem);
+	gap: 1.5rem;
+	margin-bottom: 3rem;
+}
+
+.gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.gallery-img-3 {
+	grid-column: 2/4;
+	grid-row: 1/3;
+}
