--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -92,8 +92,8 @@ img{
 .card-feature {
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	gap: 1.5rem;
+	justify-content: space-between;
+	gap: 1.5rem ;
 
 	background-color: #fff;
 	border-radius: 1rem;
@@ -105,11 +105,6 @@ img{
 	color: var(--primary-color);
 }
 
-.feature-content {
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
-}
 
 .feature-content span {
 	font-weight: 700;
@@ -135,19 +130,6 @@ header{
   flex-direction: row;
 }
 
-
-.login{
-  margin: 5px;
-  font-size: 25px;
-  position: absolute;
-  text-decoration: none;
-  color: #4f4eb1;
-  font-weight: bold;
-  padding: 50px;
-  align-items: center;
-  align-content: right;
-  flex-direction: row;
-}
 header nav{
   margin: 5px;
   font-size: 20px;
@@ -155,7 +137,6 @@ header nav{
   text-decoration: none;
   color: #080808;
   font-weight: bold;
-  padding: 500px;
   align-items: center;
   align-content: right;
   flex-direction: row;
@@ -385,22 +366,6 @@ color: #0a0a0a;
     padding: 150px;
   }
   
-  .card-feature {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.5rem;
-  
-    background-color: #fff;
-    border-radius: 1rem;
-    padding: 1.5rem 0;
-  }
-  
-  .card-feature i {
-    font-size: 2.7rem;
-    color: var(--primary-color);
-  }
-  
   .feature-content {
     display: flex;
     flex-direction: column;
@@ -427,6 +392,7 @@ color: #0a0a0a;
     flex-direction: column;
     gap: 2rem;
   margin-top: -400px;
+
   }
   
   .container-categories {
@@ -812,9 +778,33 @@ margin-top: 40px;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+
 }
 
 .gallery-img-3 {
 	grid-column: 2/4;
 	grid-row: 1/3;
+}
+
+.container-modal {
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  background: rgba(0, 0, 0, 0.356);
+  backdrop-filter: blur(10px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  z-index: 50;
+  width: 50%;
+  inset: 0;
+  height: 50%;
+  background-color: beige;
 }
