--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -801,6 +801,7 @@ margin-top: 40px;
 
 .modal {
   display: flex;
+  align-items: center;
   flex-direction: column;
   z-index: 50;
   width: 50%;
@@ -808,3 +809,34 @@ margin-top: 40px;
   height: 50%;
   background-color: beige;
 }
+
+.cerrar{
+  cursor: pointer;
+  display: flex;
+ justify-content: left;
+  margin-right: 2px;
+}
+
+#Cantidad{
+display: flex;
+justify-content: left;
+width: 50%;
+}
+
+#Comentario{
+  display: flex;
+  justify-content: left;
+  width: 50%;
+  height: 20%;
+}
+
+.agregar{
+  cursor: pointer;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  
+  padding: 10px 20px;
+  font-size: 16px;
+  }
