--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -82,11 +82,11 @@ img{
 /*              FEATURES              */
 /* ********************************** */
 .container-features {
-  margin-top: -30px;
+  margin: 3rem auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 3rem;
-	padding: 3rem 0;
+  padding: 0 2rem;
 }
 
 .card-feature {
@@ -160,53 +160,45 @@ header nav .selected{
   position: relative;
 }
 .contenedor-seccion .fondo-seccion{
-  position: absolute;
-  margin-left: 30px;
-  top: 0;
   background: url("https://www.comidaspopulares.com/index/wp-content/uploads/2024/05/comidas_populares_a_medida_01.jpg");
-  background-size: cover;
-  width:97%;
-  height: 700px;
-  border-radius: 20px;
+  background-size: auto;
+  background-repeat: no-repeat;
+
 }
 
 .contenedor-seccion .inicio{
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-around;
-  height: 400px;
+  height: 80vh;
+  width: 100%;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 30px;
+
 }
-.contenedor-seccion .inicio .col{
-  width: 80%;
-  align-items: center;
-}
-.contenedor-seccion .inicio .col .titulo-inicio{
+.contenedor-seccion .inicio .titulo-inicio{
   line-height: 40px;
   font-size: 30px;
   color: #fcf8f8;
   margin-bottom: 15px;
 }
-.contenedor-seccion .inicio .col .buscador{
+.contenedor-seccion .inicio .buscador{
   width: 50%;
-  margin: auto;
   background-color: #fff;
   display: flex;
+  margin-top: 50px;
   align-items: center;
   border-radius: 30px;
   overflow: hidden;
 }
-.contenedor-seccion .inicio .col .buscador input{
+.contenedor-seccion .inicio .buscador input{
   width: 100%;
   border: none;
   display: inline-block;
   padding: 10px;
   outline: none;
 }
-.contenedor-seccion .inicio .col .buscador span{
+.contenedor-seccion .inicio .buscador span{
   width: 70px;
   margin-left: 100px;
   height: 50px;
@@ -214,10 +206,10 @@ header nav .selected{
   cursor: pointer;
   cursor: pointer;
 }
-.contenedor-seccion .inicio .col .buscador span i{
+.contenedor-seccion .inicio .buscador span i{
   padding-right: 10px;
 }
-.contenedor-seccion .inicio .col .buscador span:hover{
+.contenedor-seccion .inicio .buscador span:hover{
   background-color:#ccc;
 }
 
@@ -289,7 +281,7 @@ text-align: center;
   .container{
    margin-top: 0px;
     width: 100%;
-    height: 120vh;
+    height:fit-content;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -299,7 +291,8 @@ text-align: center;
    
   }
   .container .card{
-    margin-top: -500px;
+    cursor: pointer;
+    margin-top: 0;
     width: 200px;
     height: 270px;
     overflow: hidden;
@@ -319,9 +312,7 @@ text-align: center;
     height: 120px;
     transition: 0.4;
   }
-  .container .card .product-image img:hover{
-    transform: scale(1.1);
-  }
+  
    
 .container .card .product-info{
 font-size: 17px;
@@ -359,12 +350,7 @@ color: #0a0a0a;
   /* ********************************** */
   /*              FEATURES              */
   /* ********************************** */
-  .container-features {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 3rem;
-    padding: 150px;
-  }
+
   
   .feature-content {
     display: flex;
@@ -391,8 +377,7 @@ color: #0a0a0a;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-  margin-top: -400px;
-
+    margin-top: 3rem;
   }
   
   .container-categories {
@@ -804,17 +789,19 @@ margin-top: 40px;
   align-items: center;
   flex-direction: column;
   z-index: 50;
-  width: 50%;
+  width: 35%;
   inset: 0;
-  height: 50%;
+  height: 35%;
   background-color: beige;
 }
 
 .cerrar{
   cursor: pointer;
   display: flex;
- justify-content: left;
-  margin-right: 2px;
+ justify-content: right;
+ width: 100%;
+  padding-right: 10px;
+  padding-top: 10px;
 }
 
 #Cantidad{
@@ -835,8 +822,40 @@ width: 50%;
   margin-top: 10px;
   display: flex;
   justify-content: center;
-  width: 50%;
-  
+  width:fit-content;
   padding: 10px 20px;
   font-size: 16px;
+  }
+
+  .iconocarrito{
+    width: 25px;
+  }
+
+  .sumar{
+    background-color: gray;
+    
+    width: 50%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    position: fixed ;
+    border-radius: 2%;
+    bottom: 0;
+    right: 0;
+  }
+
+  .finalizar{
+    background-color: green;
+   width: fit-content;
+margin-top: 20px;
+  }
+
+  .centrar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:  center;
+    width: 100%;
   }
