--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -850,6 +850,8 @@ width: 50%;
     background-color: green;
    width: fit-content;
 margin-top: 20px;
+color: black;
+text-decoration: none;
   }
 
   .centrar {
