--- a/Estilos.css/index.css
+++ b/Estilos.css/index.css
@@ -161,9 +161,8 @@ header nav .selected{
 }
 .contenedor-seccion .fondo-seccion{
   background: url("https://www.comidaspopulares.com/index/wp-content/uploads/2024/05/comidas_populares_a_medida_01.jpg");
-  background-size: auto;
+  background-size: cover;
   background-repeat: no-repeat;
-
 }
 
 .contenedor-seccion .inicio{
@@ -172,7 +171,7 @@ header nav .selected{
   align-items: start;
   justify-content: space-around;
   height: 80vh;
-  width: 100%;
+  width: 100;
   text-align: center;
 
 }
@@ -447,43 +446,7 @@ color: #0a0a0a;
   .card-category span:hover {
     color: var(--primary-color);
   }
-.formulario{
-  width: 400px;
-  background: #d4e3f1;
-  padding: 30px;
-  margin: auto;
-  margin-top: 100px;
-  font-family: 'calibri';
-  color: rgb(10, 10, 10);
-  border: 7px solid rgb(127, 174, 201);
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgb(37, 29, 43);
-}
 
-.formulario h4 {
-  font-size: 20px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.formulario .completar {
-  width: 100%;
-  background: #dadfe0;
-  padding: 10px;
-  border-radius: 4px;
-  margin-bottom: 10px;
-  border: 1px solid #53699e;
-  font-family: 'calibri';
-  font-size: 18px;
-  color: rgb(245, 236, 236);
-}
-
-.formulario p {
-  height: 40px;
-  text-align: center;
-  font-size: 18px;
-  line-height: 20px;
-}
 h2{
   color: #2a2b2e;
   margin: 0px;
@@ -493,53 +456,6 @@ h2{
   padding: 0px;
   font-family: ' 'Gill Sans MT';
 }
-.formulario a {
-  color: rgb(10, 10, 10);
-  font-size: 15px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-.formulario a:hover {
-  color: rgb(27, 26, 26);
-  text-decoration: none;
-}
-
-.formulario .botons {
-  width: 100%;
-  background: #375388;
-  border: none;
-  padding: 12px;
-  color: white;
-  margin: 16px 0;
-  font-size: 16px;
-}
-
-.slider.slide{
-  width: 150px;
-  display: flex;
-  flex-wrap: nowrap;
-}
-.slider.slide img{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 150px;
-  align-content: stretch;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.slider{
-display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  height: auto;
-  margin: auto;
-  overflow: hidden;
-  position: absolute;
-  width: 150vw;
-  padding: 50px;
-  margin-left: 100px;
-}   
 
 
   
